--- a/memory_game_tutorial.html
+++ b/memory_game_tutorial.html
@@ -31,7 +31,7 @@
       var memory_tile_ids = [];
       var tiles_flipped = 0;
       
-      // Shuffle array method which overwrites your memory_array with one that is shuffled,
+      // Method to shuffle array which overwrites your memory_array with one that is shuffled,
       // the prototype property adds it to all Array objects
         Array.prototype.memory_tile_shuffle = function () {
             var i, j, temp;
